--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.4",
     "lucide-vue-next": "^0.474.0",
+    "tailwindcss": "^4.0.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
